Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36802

Invalid drawable and invalid frame buffer with GLWidget in Qt 5.2.1

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0 RC
    • 5.2.1, 5.3.1
    • GUI: OpenGL
    • OS X Lion and Mavericks, Xcode 4.6, Macbook Pro 13", early 2011.

      When I build the attached project using Qt 5.2.1 on OS X (creating a Xcode project and running from Xcode) I see an "invalid drawable" message logged in the output window when I set a GLWidget as the central widget. The message comes during execution of setCentralWidget(). It all works, but this message did not appear with Qt 5.1.0.

      Additionally, the first call to paingGL() for the GLWidget shows an invalid frame buffer (status 33305) in a diagnostic call to glCheckFramebufferStatus(), and after a call to glClear(), glGetError() reports an invalid frame buffer. Again, this does not stop the program working, but is a concern. In this example program, deleting the call to add a menu item appears to fix the problem, as does moving it to after the setCentralWidget() call. In the larger, much more complex application where this first was seen, where a number of GLWidgets are in frames and splitters with scroll bars, just moving the menu setup does not fix the problem.

      On my test machines this problem (or problems) merely generates unwanted diagnostics, it seems, but I'm concerned that on other machines with different graphics sub-systems things may be different.

      I had originally thought this was connected with https://bugreports.qt-project.org/browse/QTBUG-35342 when I first saw it in 5.2.0, but I suspect it is a different problem.

        1. demo.tar
          10 kB
          Keith Shortridge
        2. QT-36802-test.tar.gz
          1 kB
          Lorenzo Villani
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            keiths Keith Shortridge
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes